moved as much as possible to the EnableSabloValue (there the loop is over all the children) all WebComponents do get a default enable value (so the flag as changed works) Added the sablo EnablePropertyType to to the type registry removed IWrapPropertyValue